# cringe_radio

./: .gitignore  Cargo.toml  Dockerfile  readme.md
.github/: work.yml
.github/workflows/: work.yml
src/: args.rs  main.rs  openai.rs  parser.rs  play.rs  skip.rs  stop.rs  youtube.rs
