[package]
name = "cringe_radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'

[dependencies]
serenity = { version = "0.11" } #, default-features = false, features = ["client", "rustls_backend", "ClientBuilder"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# songbird = { version = "0.3", features = ["builtin-queue"] }
url = "2"
log = "0.4"
env_logger = "0.10"
clap = { version = "4", features = ["derive"] }
reqwest = "0.11"
anyhow = "1"
serde_json = "1"
regex = "1.7"
serde = { version = "1", features = ["derive"] }

[dependencies.songbird]
features = ["builtin-queue"]
git = "https://github.com/Erk-/songbird/"
branch = "do-not-fail-if-new-opcode"